--- a/data/datamanip.ipynb
+++ b/data/datamanip.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 170,
-   "id": "ef472839",
+   "execution_count": 186,
+   "id": "48fbede1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,8 +16,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
-   "id": "32d831e2",
+   "execution_count": 187,
+   "id": "b6ca8ac6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,8 +26,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
-   "id": "7add0393",
+   "execution_count": 188,
+   "id": "afdb530a",
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
        "[44691 rows x 7 columns]"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,18 +235,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
-   "id": "3d6a46ab",
+   "execution_count": 189,
+   "id": "686494f2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "c = c[c['population'] > 100000]"
+    "c = c[c['population'] > 200000]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
-   "id": "b806a668",
+   "execution_count": 190,
+   "id": "453f7fdd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,8 +255,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
-   "id": "cf676b65",
+   "execution_count": 191,
+   "id": "84c5e17e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,8 +267,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
-   "id": "78a62e9d",
+   "execution_count": 192,
+   "id": "0da555ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,8 +278,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
-   "id": "30034057",
+   "execution_count": 193,
+   "id": "a8e33598",
    "metadata": {
     "scrolled": true
    },
@@ -292,8 +292,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
-   "id": "9ca20d18",
+   "execution_count": 194,
+   "id": "2580e7e5",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
        "'Asia'"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,8 +313,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
-   "id": "113ee264",
+   "execution_count": 195,
+   "id": "d4e3404b",
    "metadata": {},
    "outputs": [
     {
@@ -453,103 +453,103 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1643223486</th>\n",
-       "      <td>Zelenodol'sk</td>\n",
-       "      <td>55.8500</td>\n",
-       "      <td>48.5167</td>\n",
-       "      <td>Russia</td>\n",
-       "      <td>RUS</td>\n",
-       "      <td>Tatarstan</td>\n",
-       "      <td>100009</td>\n",
+       "      <th>1356019851</th>\n",
+       "      <td>Morena</td>\n",
+       "      <td>26.5000</td>\n",
+       "      <td>78.0000</td>\n",
+       "      <td>India</td>\n",
+       "      <td>IND</td>\n",
+       "      <td>Madhya Pradesh</td>\n",
+       "      <td>200483</td>\n",
        "      <td>Asia</td>\n",
-       "      <td>Northern Asia</td>\n",
+       "      <td>South Asia</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1076601172</th>\n",
-       "      <td>Formosa</td>\n",
-       "      <td>-15.5369</td>\n",
-       "      <td>-47.3339</td>\n",
-       "      <td>Brazil</td>\n",
-       "      <td>BRA</td>\n",
-       "      <td>Goiás</td>\n",
-       "      <td>100085</td>\n",
+       "      <th>1024903782</th>\n",
+       "      <td>Soio</td>\n",
+       "      <td>-6.1333</td>\n",
+       "      <td>12.3667</td>\n",
+       "      <td>Angola</td>\n",
+       "      <td>AGO</td>\n",
+       "      <td>Zaire</td>\n",
+       "      <td>200920</td>\n",
+       "      <td>Africa</td>\n",
+       "      <td>Southern Africa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1862573240</th>\n",
+       "      <td>Guacara</td>\n",
+       "      <td>10.2333</td>\n",
+       "      <td>-67.8833</td>\n",
+       "      <td>Venezuela</td>\n",
+       "      <td>VEN</td>\n",
+       "      <td>Carabobo</td>\n",
+       "      <td>200212</td>\n",
        "      <td>Americas</td>\n",
        "      <td>South America</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1076125117</th>\n",
-       "      <td>Bacabal</td>\n",
-       "      <td>-4.2250</td>\n",
-       "      <td>-44.7800</td>\n",
-       "      <td>Brazil</td>\n",
-       "      <td>BRA</td>\n",
-       "      <td>Maranhão</td>\n",
-       "      <td>100014</td>\n",
-       "      <td>Americas</td>\n",
-       "      <td>South America</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1104492104</th>\n",
-       "      <td>Pyinmana</td>\n",
-       "      <td>19.7500</td>\n",
-       "      <td>96.2000</td>\n",
-       "      <td>Myanmar</td>\n",
-       "      <td>MMR</td>\n",
-       "      <td>Nay Pyi Taw</td>\n",
-       "      <td>100001</td>\n",
-       "      <td>Asia</td>\n",
-       "      <td>South East Asia</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1124735582</th>\n",
-       "      <td>Kamloops</td>\n",
-       "      <td>50.6761</td>\n",
-       "      <td>-120.3408</td>\n",
-       "      <td>Canada</td>\n",
-       "      <td>CAN</td>\n",
-       "      <td>British Columbia</td>\n",
-       "      <td>100046</td>\n",
+       "      <th>1840019865</th>\n",
+       "      <td>Olympia</td>\n",
+       "      <td>47.0417</td>\n",
+       "      <td>-122.8959</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>200836</td>\n",
        "      <td>Americas</td>\n",
        "      <td>North America</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1608697923</th>\n",
+       "      <td>Kabankalan</td>\n",
+       "      <td>9.9833</td>\n",
+       "      <td>122.8167</td>\n",
+       "      <td>Philippines</td>\n",
+       "      <td>PHL</td>\n",
+       "      <td>Negros Occidental</td>\n",
+       "      <td>200198</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>South East Asia</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5873 rows × 9 columns</p>\n",
+       "<p>3181 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "              city_ascii      lat       lng    country iso3        admin_name  \\\n",
-       "id                                                                              \n",
-       "1392685764         Tokyo  35.6897  139.6922      Japan  JPN             Tōkyō   \n",
-       "1360771077       Jakarta  -6.1750  106.8275  Indonesia  IDN           Jakarta   \n",
-       "1356872604         Delhi  28.6100   77.2300      India  IND             Delhi   \n",
-       "1156237133     Guangzhou  23.1300  113.2600      China  CHN         Guangdong   \n",
-       "1356226629        Mumbai  19.0761   72.8775      India  IND       Mahārāshtra   \n",
-       "...                  ...      ...       ...        ...  ...               ...   \n",
-       "1643223486  Zelenodol'sk  55.8500   48.5167     Russia  RUS         Tatarstan   \n",
-       "1076601172       Formosa -15.5369  -47.3339     Brazil  BRA             Goiás   \n",
-       "1076125117       Bacabal  -4.2250  -44.7800     Brazil  BRA          Maranhão   \n",
-       "1104492104      Pyinmana  19.7500   96.2000    Myanmar  MMR       Nay Pyi Taw   \n",
-       "1124735582      Kamloops  50.6761 -120.3408     Canada  CAN  British Columbia   \n",
+       "            city_ascii      lat       lng        country iso3  \\\n",
+       "id                                                              \n",
+       "1392685764       Tokyo  35.6897  139.6922          Japan  JPN   \n",
+       "1360771077     Jakarta  -6.1750  106.8275      Indonesia  IDN   \n",
+       "1356872604       Delhi  28.6100   77.2300          India  IND   \n",
+       "1156237133   Guangzhou  23.1300  113.2600          China  CHN   \n",
+       "1356226629      Mumbai  19.0761   72.8775          India  IND   \n",
+       "...                ...      ...       ...            ...  ...   \n",
+       "1356019851      Morena  26.5000   78.0000          India  IND   \n",
+       "1024903782        Soio  -6.1333   12.3667         Angola  AGO   \n",
+       "1862573240     Guacara  10.2333  -67.8833      Venezuela  VEN   \n",
+       "1840019865     Olympia  47.0417 -122.8959  United States  USA   \n",
+       "1608697923  Kabankalan   9.9833  122.8167    Philippines  PHL   \n",
        "\n",
-       "            population continent           region  \n",
-       "id                                                 \n",
-       "1392685764    37732000      Asia        East Asia  \n",
-       "1360771077    33756000      Asia  South East Asia  \n",
-       "1356872604    32226000      Asia       South Asia  \n",
-       "1156237133    26940000      Asia        East Asia  \n",
-       "1356226629    24973000      Asia       South Asia  \n",
-       "...                ...       ...              ...  \n",
-       "1643223486      100009      Asia    Northern Asia  \n",
-       "1076601172      100085  Americas    South America  \n",
-       "1076125117      100014  Americas    South America  \n",
-       "1104492104      100001      Asia  South East Asia  \n",
-       "1124735582      100046  Americas    North America  \n",
+       "                   admin_name  population continent           region  \n",
+       "id                                                                    \n",
+       "1392685764              Tōkyō    37732000      Asia        East Asia  \n",
+       "1360771077            Jakarta    33756000      Asia  South East Asia  \n",
+       "1356872604              Delhi    32226000      Asia       South Asia  \n",
+       "1156237133          Guangdong    26940000      Asia        East Asia  \n",
+       "1356226629        Mahārāshtra    24973000      Asia       South Asia  \n",
+       "...                       ...         ...       ...              ...  \n",
+       "1356019851     Madhya Pradesh      200483      Asia       South Asia  \n",
+       "1024903782              Zaire      200920    Africa  Southern Africa  \n",
+       "1862573240           Carabobo      200212  Americas    South America  \n",
+       "1840019865         Washington      200836  Americas    North America  \n",
+       "1608697923  Negros Occidental      200198      Asia  South East Asia  \n",
        "\n",
-       "[5873 rows x 9 columns]"
+       "[3181 rows x 9 columns]"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,8 +571,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
-   "id": "43cb1138",
+   "execution_count": 196,
+   "id": "0f78ded9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,8 +581,94 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 197,
+   "id": "a082a7da",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>city_ascii</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lng</th>\n",
+       "      <th>country</th>\n",
+       "      <th>iso3</th>\n",
+       "      <th>admin_name</th>\n",
+       "      <th>population</th>\n",
+       "      <th>continent</th>\n",
+       "      <th>region</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1840000673</th>\n",
+       "      <td>Philadelphia</td>\n",
+       "      <td>40.0077</td>\n",
+       "      <td>-75.1339</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Pennsylvania</td>\n",
+       "      <td>5512873</td>\n",
+       "      <td>Americas</td>\n",
+       "      <td>North America</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              city_ascii      lat      lng        country iso3    admin_name  \\\n",
+       "id                                                                             \n",
+       "1840000673  Philadelphia  40.0077 -75.1339  United States  USA  Pennsylvania   \n",
+       "\n",
+       "            population continent         region  \n",
+       "id                                               \n",
+       "1840000673     5512873  Americas  North America  "
+      ]
+     },
+     "execution_count": 197,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c[c['city_ascii'] == 'Philadelphia']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "283474d3",
+   "id": "b42bba63",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -590,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e69317d9",
+   "id": "ec7e358a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -598,7 +684,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8928161e",
+   "id": "a0798140",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a031c1e",
    "metadata": {},
    "outputs": [],
    "source": []
