--- a/data/datamanip.ipynb
+++ b/data/datamanip.ipynb
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "c23aeedc",
+   "id": "c8bf7858",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "f177a85a",
+   "id": "65e901fe",
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +868,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "4fcd4621",
+   "id": "bc34ca41",
    "metadata": {
     "scrolled": true
    },
@@ -900,11 +900,195 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "id": "b42bba63",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('China', 623),\n",
+       " ('India', 266),\n",
+       " ('United States', 234),\n",
+       " ('Brazil', 139),\n",
+       " ('Japan', 134),\n",
+       " ('Russia', 97),\n",
+       " ('Mexico', 91),\n",
+       " ('Philippines', 79),\n",
+       " ('Turkey', 79),\n",
+       " ('Indonesia', 77),\n",
+       " ('Nigeria', 62),\n",
+       " ('South Korea', 52),\n",
+       " ('Vietnam', 51),\n",
+       " ('Iran', 48),\n",
+       " ('Germany', 40),\n",
+       " ('United Kingdom', 40),\n",
+       " ('Pakistan', 40),\n",
+       " ('Colombia', 33),\n",
+       " ('Ukraine', 32),\n",
+       " ('Venezuela', 31),\n",
+       " ('Bangladesh', 31),\n",
+       " ('Spain', 30),\n",
+       " ('Iraq', 29),\n",
+       " ('Egypt', 28),\n",
+       " ('Canada', 27),\n",
+       " ('South Africa', 25),\n",
+       " ('Argentina', 25),\n",
+       " ('Angola', 24),\n",
+       " ('Malaysia', 24),\n",
+       " ('Saudi Arabia', 23),\n",
+       " ('Congo (Kinshasa)', 19),\n",
+       " ('Morocco', 19),\n",
+       " ('Peru', 18),\n",
+       " (\"Côte d'Ivoire\", 18),\n",
+       " ('Sudan', 17),\n",
+       " ('Chile', 17),\n",
+       " ('Poland', 17),\n",
+       " ('Italy', 16),\n",
+       " ('Myanmar', 15),\n",
+       " ('North Korea', 15),\n",
+       " ('Somalia', 15),\n",
+       " ('Kazakhstan', 14),\n",
+       " ('Taiwan', 13),\n",
+       " ('Cuba', 11),\n",
+       " ('Australia', 11),\n",
+       " ('Uzbekistan', 11),\n",
+       " ('France', 11),\n",
+       " ('Algeria', 10),\n",
+       " ('Ethiopia', 10),\n",
+       " ('Bolivia', 10),\n",
+       " ('Romania', 9),\n",
+       " ('Dominican Republic', 9),\n",
+       " ('Netherlands', 9),\n",
+       " ('Afghanistan', 9),\n",
+       " ('Tanzania', 9),\n",
+       " ('Senegal', 8),\n",
+       " ('Ecuador', 8),\n",
+       " ('Ghana', 8),\n",
+       " ('Benin', 8),\n",
+       " ('Israel', 8),\n",
+       " ('Guatemala', 8),\n",
+       " ('Hong Kong', 7),\n",
+       " ('Madagascar', 7),\n",
+       " ('Cameroon', 7),\n",
+       " ('Mozambique', 7),\n",
+       " ('Belarus', 7),\n",
+       " ('Syria', 7),\n",
+       " ('Portugal', 7),\n",
+       " ('Libya', 6),\n",
+       " ('Haiti', 6),\n",
+       " ('Kenya', 6),\n",
+       " ('Yemen', 6),\n",
+       " ('Hungary', 6),\n",
+       " ('New Zealand', 6),\n",
+       " ('Finland', 6),\n",
+       " ('Paraguay', 5),\n",
+       " ('Nepal', 5),\n",
+       " ('Zambia', 5),\n",
+       " ('Jordan', 5),\n",
+       " ('Uganda', 5),\n",
+       " ('United Arab Emirates', 5),\n",
+       " ('Honduras', 5),\n",
+       " ('Oman', 4),\n",
+       " ('Bulgaria', 4),\n",
+       " ('El Salvador', 4),\n",
+       " ('Norway', 4),\n",
+       " ('Zimbabwe', 4),\n",
+       " ('Czechia', 4),\n",
+       " ('Turkmenistan', 4),\n",
+       " ('Greece', 4),\n",
+       " ('Tunisia', 4),\n",
+       " ('Belgium', 4),\n",
+       " ('Guinea', 3),\n",
+       " ('Central African Republic', 3),\n",
+       " ('Mali', 3),\n",
+       " ('Ireland', 3),\n",
+       " ('Tajikistan', 3),\n",
+       " ('Sweden', 3),\n",
+       " ('Sri Lanka', 3),\n",
+       " ('Austria', 3),\n",
+       " ('Niger', 3),\n",
+       " ('Azerbaijan', 3),\n",
+       " ('Congo (Brazzaville)', 3),\n",
+       " ('Qatar', 3),\n",
+       " ('Panama', 3),\n",
+       " ('Thailand', 3),\n",
+       " ('Cyprus', 2),\n",
+       " ('Kuwait', 2),\n",
+       " ('Sierra Leone', 2),\n",
+       " ('Laos', 2),\n",
+       " ('Lithuania', 2),\n",
+       " ('Switzerland', 2),\n",
+       " ('Denmark', 2),\n",
+       " ('Malawi', 2),\n",
+       " ('Slovakia', 2),\n",
+       " ('Burkina Faso', 2),\n",
+       " ('Serbia', 2),\n",
+       " ('Kyrgyzstan', 2),\n",
+       " ('Rwanda', 2),\n",
+       " ('The Gambia', 2),\n",
+       " ('Puerto Rico', 2),\n",
+       " ('Nicaragua', 2),\n",
+       " ('Lebanon', 2),\n",
+       " ('South Sudan', 2),\n",
+       " ('Eritrea', 1),\n",
+       " ('Armenia', 1),\n",
+       " ('Malta', 1),\n",
+       " ('Gabon', 1),\n",
+       " ('Mauritania', 1),\n",
+       " ('Chad', 1),\n",
+       " ('Lesotho', 1),\n",
+       " ('The Bahamas', 1),\n",
+       " ('Georgia', 1),\n",
+       " ('Suriname', 1),\n",
+       " ('Guyana', 1),\n",
+       " ('Timor-Leste', 1),\n",
+       " ('Martinique', 1),\n",
+       " ('Macedonia', 1),\n",
+       " ('Mongolia', 1),\n",
+       " ('Cambodia', 1),\n",
+       " ('Albania', 1),\n",
+       " ('Slovenia', 1),\n",
+       " ('Namibia', 1),\n",
+       " ('Costa Rica', 1),\n",
+       " ('Burundi', 1),\n",
+       " ('Liberia', 1),\n",
+       " ('Gaza Strip', 1),\n",
+       " ('Bosnia and Herzegovina', 1),\n",
+       " ('Estonia', 1),\n",
+       " ('West Bank', 1),\n",
+       " ('Singapore', 1),\n",
+       " ('Moldova', 1),\n",
+       " ('Uruguay', 1),\n",
+       " ('Papua New Guinea', 1),\n",
+       " ('Reunion', 1),\n",
+       " ('Mauritius', 1),\n",
+       " ('Latvia', 1),\n",
+       " ('Equatorial Guinea', 1),\n",
+       " ('Guinea-Bissau', 1),\n",
+       " ('Guadeloupe', 1),\n",
+       " ('Croatia', 1),\n",
+       " ('Togo', 1),\n",
+       " ('Botswana', 1),\n",
+       " ('Jamaica', 1),\n",
+       " ('Djibouti', 1),\n",
+       " ('Macau', 1),\n",
+       " ('Bahrain', 1)]"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cs = list(c['country'])\n",
+    "csdict = {}\n",
+    "for co in set(cs):\n",
+    "    csdict[co] = cs.count(co)\n",
+    "\n",
+    "sorted(csdict.items(), key=lambda x:x[1], reverse=True)"
+   ]
   },
   {
    "cell_type": "code",
